fixed font size on mobile

--- a/src/sass/core/_typography.scss
+++ b/src/sass/core/_typography.scss
@@ -25,7 +25,7 @@ body {
 
 .restaurant-name-container {
     color: $platinum;
-    font-size: 5vw;
+    font-size: 4rem;
     font-family: 'WindSong', cursive;
 }
 
