--- a/src/sass/sections/_hero.scss
+++ b/src/sass/sections/_hero.scss
@@ -52,6 +52,7 @@
     position: absolute;
     width: 100vw;
     top: 10vh;
+    font-size: 4rem;
 
     span {
         font-size: 4rem;
